--- a/modules/test_module/test_module.html
+++ b/modules/test_module/test_module.html
@@ -1,4 +1,15 @@
-<div class="modul">
+<div class="module">
 <h3>Это тестовый модуль</h3>
-<p>Здесь мы будем тестировать ajax запрос.</p>
+<p>Здесь мы будем тестировать ajax запрос и работу подогружаемонго модуля.</p>
 </div>
+<script>
+    var module = new Vue ({
+        el: ".module",
+        data: {
+
+        },
+        methots: {
+
+        }
+    })
+</script>
