--- a/modules/module_template_press.html
+++ b/modules/module_template_press.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Расчеты в бурении</title>
     <!-- Bootstrap CSS -->
-    <link href="http:/burhelper/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http:/burhelper/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap-theme.css" rel="stylesheet">
     <!-- My styles -->
-    <link href="http:/burhelper/style/style.css" rel="stylesheet">
+    <link href="../style/style.css" rel="stylesheet">
     <!-- jQuery JS -->
-    <script src="http:/burhelper/scripts/jquery-3.2.1.js"></script>
+    <script src="../scripts/jquery-3.2.1.js"></script>
     <!-- Bootstrap JS -->
-    <script src="http:/burhelper/bootstrap/js/bootstrap.js"></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
     <!-- Работа с числами с плавающей точкой -->
-    <script src="http:/burhelper/scripts/big.min.js"></script>
+    <script src="../scripts/big.min.js"></script>
     <!-- Подключение Vue.js -->
-    <script src="http:/burhelper/scripts/vue.js"></script>
+    <script src="../scripts/vue.js"></script>
 </head>
 
 <body>
@@ -39,45 +39,45 @@
             
             <div class="module">
                 <div class="input-group">
-                    <input type="text" class="form-control pressure" placeholder="паскаль" aria-describedby="basic-addon2" id="input_pa" value="1">
+                    <input v-on:input="convert($event.target.value,$event.target.id)" type="text" class="form-control pressure" placeholder="паскаль" aria-describedby="basic-addon2" id="input_pa" :value="pa">
                     <span class="input-group-addon" id="basic-addon2">Па</span>
                 </div>
                 <br>
                 <div class="input-group">
                     <input type="text" class="form-control pressure" placeholder="мегапаскаль" aria-describedby="basic-addon2" id="input_mpa"
-                        value="0.000001">
+                        :value="mpa">
                     <span class="input-group-addon" id="basic-addon2">МПа</span>
                 </div>
                 <br>
                 <div class="input-group">
-                    <input type="text" class="form-control pressure" placeholder="Бар" aria-describedby="basic-addon2" id="input_bar" value="0.00001">
+                    <input type="text" class="form-control pressure" placeholder="Бар" aria-describedby="basic-addon2" id="input_bar" :value="bar">
                     <span class="input-group-addon" id="basic-addon2">Бар</span>
                 </div>
                 <br>
                 <div class="input-group">
                     <input type="text" class="form-control pressure" placeholder="ат | кгс/см2" aria-describedby="basic-addon2" id="input_at"
-                        value="0.00001019716212978">
+                        :value="at">
                     <span class="input-group-addon" id="basic-addon2">ат | кгс/см<sup>2</sup></span>
                 </div>
                 <br>
                 <div class="input-group">
-                    <input type="text" class="form-control pressure" placeholder="атм" aria-describedby="basic-addon2" id="input_atm" value="0.00000986923266716">
+                    <input type="text" class="form-control pressure" placeholder="атм" aria-describedby="basic-addon2" id="input_atm" :value="atm">
                     <span class="input-group-addon" id="basic-addon2">атм</span>
                 </div>
                 <br>
                 <div class="input-group">
                     <input type="text" class="form-control pressure" placeholder="метр.вод.ст" aria-describedby="basic-addon2" id="input_mvs"
-                        value="0.0001019744288922">
+                        :value="mvs">
                     <span class="input-group-addon" id="basic-addon2">метр.вод.ст</span>
                 </div>
                 <br>
                 <div class="input-group">
-                    <input type="text" class="form-control pressure" placeholder="psi" aria-describedby="basic-addon2" id="input_psi" value="0.00014503773773">
+                    <input type="text" class="form-control pressure" placeholder="psi" aria-describedby="basic-addon2" id="input_psi" :value="psi">
                     <span class="input-group-addon" id="basic-addon2">psi</span>
                 </div>
                 <br>
                 <div class="input-group">
-                    <input type="text" class="form-control pressure" placeholder="ksi" aria-describedby="basic-addon2" id="input_ksi" value="0.00000014503773773">
+                    <input type="text" class="form-control pressure" placeholder="ksi" aria-describedby="basic-addon2" id="input_ksi" :value="ksi">
                     <span class="input-group-addon" id="basic-addon2">ksi</span>
                 </div>
                 <br>
@@ -96,15 +96,36 @@
         </div>
     </div>
     <script>
+    // Давление (pressure)
+    /*
+    Паскаль / 1 / input_pa
+    Мегапаскаль /0.000001 /input_mpa
+    Бар / 0.00001 / input_bar
+    Тех.атмосфера 'ат', 'кгс/см2'/ 0.00001019716212978 / input_at
+    Атмосфера 'атм' / 0.00000986923266716 / input_atm
+    Метров водного столба 'метр.вод.ст' (1000 кг/м2) / 0.0001019744288922 / input_mvs
+    Фунт на квадратный дюйм 'psi'/ 0.00014503773773 / input_psi
+    1000 фунтов на квадратный дюйм 'ksi' / 0.00000014503773773 / input_ksi
+    */
         var module = new Vue({
             el: ".module",
             data: {
-                a: 2,
-                b: 2
+                pa: 1,
+                mpa: 0.000001,
+                bar: 0.00001,
+                at: 0.00001019716212978,
+                atm: 0.00000986923266716,
+                mvs: 0.0001019744288922,
+                psi: 0.00014503773773,
+                ksi: 0.00000014503773773,
+                input: ["pa","mpa","bar","at","atm","mvs","psi","ksi"],
+                const: [1,0.000001,0.00001,0.00001019716212978,0.00000986923266716,0.0001019744288922,0.00014503773773,0.00000014503773773],
+                //val: Number, id: String
             },
             methods: {
-                test_func: function () {
-                    console.log(this.a + this.b);
+                convert: function (val, id) {
+                    
+                    console.log(val, id);
                 }
             }
         })
