--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="scripts/big.min.js"></script>
     <!-- Подключение Vue.js -->
     <script src="scripts/vue.js"></script>
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     <div class="container" id="mainapp">
         <!--Изменение максимальной ширины на 450px (стандартно 750px) через класс "container"-->
         <div class="well well-sm text-center">
-            <b><a href="#">Burhelper.ru</a></b>
+            <img src="favicon.png" class="mainimg"><b><a href="#">Burhelper.ru</a></b>
             <h1>Расчеты в бурении</h1>
             <small>Мини утилиты на каждый день.</small>
             <br>
